# hedylogos

./: .gitignore  README-de.md  README.md  go.mod  go.sum  main.go  pyproject.toml
doc/: specification.md  specification.pages
editor/: editor.html  index.html  new.html
editor/css/: style.css
enum/: enum.go
example/: scenario.json
graphml/: graphml.go
gui/: gui.go
hedylogos/: __main__.py  controller.py  exception.py  model.py  player.py  receiver.py
misc/: decoder.go  editor-logo.afpub  favicon.afpub  film-2010.graphml  logo.afdesign  logo.afpub  rewe_headphones.afdesign  test.graphml
model/: audio.go  data.go  edge.go  key.go  language.go  node.go  story.go
oldmodel/: edge.go  key.go  node.go  story.go
test/: dead-end-node-cyclic.graphml  dead-end-node.graphml  end-node-with-audio.graphml  file-not-found.graphml  ids-not-unique.json  incoming-edge-on-start.graphml  invalid-edge-value.graphml  invalid-link-target.json  links-without-number.json  mixed-link-types.json  no-end-node.graphml  no-start-node.graphml  node-without-title.graphml  outgoing-edge-on-end.graphml  playback-failed.graphml  start-node-with-audio.graphml  test.graphml  undirected-edge.graphml
